tests/safeHaskell/safeLanguage/SafeLang07.stderr

SafeLang07.hs:2:14: warning: [GHC-98887]
    -XGeneralizedNewtypeDeriving is not allowed in Safe Haskell; ignoring -XGeneralizedNewtypeDeriving

SafeLang07.hs:15:1: error: [GHC-87110]
    Could not find module ‘SafeLang07_A’.
    Use -v to see a list of the files searched for.
